--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -49,6 +49,6 @@ windows:
       layout: main-vertical
       panes:
         - console: bin/rails c
-        - rails: bin/rails s --binding=0.0.0.0 --port=6040
         - services: docker-compose up
+        - rails: bin/rails s --binding=0.0.0.0
         - webpacker: bin/webpack-dev-server
