--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -55,8 +55,8 @@ development:
   dev_server:
     https: false
     host: localhost
-    port: 3035
-    public: localhost:3035
+    port: 6111
+    public: "0.0.0.0:6111"
     hmr: false
     # Inline should be set to true if using HMR
     inline: true
