--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -52,3 +52,4 @@ windows:
         - services: docker-compose up
         - rails: bin/rails s --binding=0.0.0.0
         - webpacker: bin/webpack-dev-server
+        - sidekiq: bundle exec sidekiq
