Cleaned up the specs

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,10 @@
 # Settings for the correct test database
+POSTGRES_HOST=localhost
+POSTGRES_PORT=6120
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=noosphere_test
 DATABASE_URL=postgres://postgres:postgres@localhost:6120/noosphere_test
+
+SYSTEM_MAILER_DEFAULT_FROM_ADDRESS=guth.bandar@institute-for-historical-inquiry.edu
+SYSTEM_MAILER_DEFAULT_RECIPIENT_ADDRESS=hapthorn@discriminators.com
