--- a/.tmuxinator.yml
+++ b/.tmuxinator.yml
@@ -27,7 +27,7 @@ on_project_stop: docker-compose down
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
-pre_window: rvm use 2.7.2
+pre_window: rvm use "$(cat .ruby-version)" && nvm version "$(cat .nvmrc)"
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
