--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "private": true,
   "version": "0.1.0",
   "dependencies": {
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "@hotwired/turbo-rails": "^7.0.0-beta.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "@tailwindcss/forms": "^0.3.2",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "autoprefixer": "^9",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "postcss": "^7",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "stimulus": "^2.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^1.5.3",
