--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
-    "@tailwindcss/forms": "^0.3.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "autoprefixer": "^9",
@@ -29,7 +30,6 @@
     "react-router-dom": "^5.2.0",
     "react_ujs": "^2.6.1",
     "stimulus": "^2.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
