Allow for graphql files to be in any subfolder

--- a/graphql-codegen.yml
+++ b/graphql-codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: "app/graphql/schema.graphql"
-documents: "app/javascript/graphql/**/*.graphql"
+documents: "app/javascript/**/*.graphql"
 generates:
   app/javascript/components/graphql/SchemaGenerated.ts:
     plugins:
