--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "graphql": "^15.5.0",
+    "ignore-loader": "^0.1.2",
     "postcss": "^7",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
